                                      Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
  - 30-11-2004 added: [ 917706 ] Extra OSD Info (estimated end time & movie filename)
  - 30-11-2004 fixed: [ 970904 ] Screensaver stays on with WebServer/un-pause
  - 30-11-2004 fixed: imdb info/thumbs not saved
  - 29-11-2004 added: Kai protocol level debugging + Specify Kai engine host IP in Settings.
  - 29-11-2004 fixed: [ 1072703 ] Joliet filenames corrupted
  - 28-11-2004 fixed: weird bug whereby Kai friends list wasn't sorted correctly.
  - 28-11-2004 fixed: serialize Kai game titleid resolution and player count requests.
  - 28-11-2004 added: Movie runtime to IMDB info screen + combined Rating+Votes item
  - 28-11-2004 added: get current Kai player count for each game in the games view.
  - 28-11-2004 added: ability to force specific Kai arena - game title id mappings.
  - 28-11-2004 fixed: possible lockup switching from gui to fullscreen video while video playing
  - 28-11-2004 fixed: bug in kaiclient preventing voice chat from working.
  - 27-11-2004 added: Show contact/friend avatar on Kai Toast popup.
  - 27-11-2004 updated: Polish language file (Thnx to napek)
  - 27-11-2004 added: flash Kai chat tab briefly when another player sends message while tab not currently selected.
  - 27-11-2004 fixed: some memory leaks in the database code.
  - 27-11-2004 added: GUIConditionalButton
  - 27-11-2004 added: albuminfo, songs from allmusic.com are saved to database
  - 26-11-2004 added: Use left and right trigger to change between Kai views.
  - 26-11-2004 added: XLink Kai tabbed view.
  - 25-11-2004 added: XLink Kai network reachable checking.
  - 25-11-2004 changed: Fade in from dimmed and black screensaver